PgUp and PgDn no longer work to move NLA tracks up and down #40304

Closed
opened 2014-05-21 23:06:54 +02:00 by Robert Forsman · 7 comments

System Information
Linux bubastis 3.10.25-gentoo #10 SMP Thu Jan 30 22:17:35 UTC 2014 x86_64 Intel(R) Core(TM) i7-4800MQ CPU @ 2.70GHz GenuineIntel GNU/Linux
01:00.0 VGA compatible controller: NVIDIA Corporation GK107GLM [Quadro K1100M] (rev a1) (prog-if 00 [VGA controller])

Blender Version
Broken: git 08bf531956
Worked: 2.70-linux-glibc211-x86_64

Some time after 2.70 was released a regression was introduced which prevents PgUp and PgDn from moving NLA tracks. Moving NLA action strips still works.

To reproduce this

  • put a keyframe on the default cube (location is an easy choice),
  • use the vv button on the right of the track name in the NLA editor to create an action strip.
  • use the Add > Add Tracks menu option to add a few more tracks.
  • move your mouse into the track name section of the NLA editor and select one of the tracks. Attempt to relocate the track using PgUp and PgDn. It does not work.
  • move your mouse into the action strip section of the NLA editor and select the recently-created action strip. Attempt to relocate the action strip using PgUp and PgDn. It works.
**System Information** Linux bubastis 3.10.25-gentoo #10 SMP Thu Jan 30 22:17:35 UTC 2014 x86_64 Intel(R) Core(TM) i7-4800MQ CPU @ 2.70GHz GenuineIntel GNU/Linux 01:00.0 VGA compatible controller: NVIDIA Corporation GK107GLM [Quadro K1100M] (rev a1) (prog-if 00 [VGA controller]) **Blender Version** Broken: git 08bf531956b1c1cff3319d119e8aba55b7a09b9e Worked: 2.70-linux-glibc211-x86_64 Some time after 2.70 was released a regression was introduced which prevents PgUp and PgDn from moving NLA tracks. Moving NLA action strips still works. To reproduce this * put a keyframe on the default cube (location is an easy choice), * use the vv button on the right of the track name in the NLA editor to create an action strip. * use the Add > Add Tracks menu option to add a few more tracks. * move your mouse into the track name section of the NLA editor and select one of the tracks. Attempt to relocate the track using PgUp and PgDn. It does not work. * move your mouse into the action strip section of the NLA editor and select the recently-created action strip. Attempt to relocate the action strip using PgUp and PgDn. It works.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mutantbob

Added subscriber: @mutantbob
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Confirmed. Was caused by 1f3655d224

I'm surprised that this went undetected for so long, since all the rearranging functionality is essentially broken following this commit.

Confirmed. Was caused by 1f3655d224196129fc6daf20e678199b95321bff I'm surprised that this went undetected for so long, since all the rearranging functionality is essentially broken following this commit.

This issue was referenced by 9e76f13e6b

This issue was referenced by 9e76f13e6b1b3c5f9760879ba3c026b491330b14
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 9e76f13e6b.

Closed by commit 9e76f13e6b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40304
No description provided.