Fix T40304: Rearranging NLA Tracks (and actually, all animation channels) didn't work anymore

These were broken by 1f3655d224196129fc6daf20e678199b95321bff, since
an argument of the wrong type was getting passed to ANIM_animdata_filter(),
resulting in no channels ever being picked up for the "visible channels" list.